more calendar functionality

--- a/app/src/main/res/drawable/background_circle_outline_today.xml
+++ b/app/src/main/res/drawable/background_circle_outline_today.xml
@@ -5,5 +5,5 @@
     <!-- outline of the circle-->
     <stroke
         android:width="2dp"
-        android:color="@color/mint" />
+        android:color="@color/today" />
 </shape>
