--- a/app/src/main/res/drawable/background_circle_today.xml
+++ b/app/src/main/res/drawable/background_circle_today.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/wintergreen"/>
+    <solid android:color="@color/today"/>
 </shape>
