--- a/app/src/main/res/layout/fragment_edit_task.xml
+++ b/app/src/main/res/layout/fragment_edit_task.xml
@@ -6,8 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
+    android:layout_margin="4dp"
     android:layout_gravity="bottom"
-    android:visibility="gone">
+    android:background="@drawable/edit_task_background">
 
     <LinearLayout
         android:id="@+id/taskDetails"
@@ -47,18 +48,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="Select due date"
-                android:padding="8dp"
+                android:padding="4dp"
+                android:layout_margin="2dp"
                 android:textSize="10sp"
-                android:background="@android:drawable/editbox_background_normal"/>
+                android:background="@drawable/date_selector_background"/>
 
             <TextView
                 android:id="@+id/textViewTime"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:hint="Select due time"
-                android:padding="8dp"
+                android:padding="4dp"
+                android:layout_margin="2dp"
                 android:textSize="10sp"
-                android:background="@android:drawable/editbox_background_normal"/>
+                android:background="@drawable/date_selector_background"/>
         </LinearLayout>
     </LinearLayout>
 
