--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,4 +30,25 @@
     <color name="calendar_weekday_text">#0000FF</color>
     <color name="calendar_date_text">#000000</color>
     <color name="calendar_selected_date_circle">#FF0000</color>
+
+    <!-- peach -->
+
+    <!-- Primary Palette -->
+    <color name="soft_blush_pink">#FDC6C6</color>
+    <color name="coral_rose">#F88C9C</color>
+    <color name="deep_rose">#C2185B</color>
+    <color name="cream_white">#FFF5F5</color>
+    <color name="cotton_candy_pink">#F39AC0</color>
+
+    <!-- Supporting Colors -->
+    <color name="warm_gray">#B6A5A5</color>
+    <color name="blush_mint">#E7FFF2</color>
+    <color name="soft_shell_pink">#F9DCDC</color>
+    <color name="misty_rose">#FDE6E6</color>
+
+    <!-- Text / Default -->
+
+
+
+
 </resources>
