converted from hard-coded colors to styles w/ generalized themes.xml (useful for switching between themes)

--- a/app/src/main/res/drawable/ic_add.xml
+++ b/app/src/main/res/drawable/ic_add.xml
@@ -6,7 +6,7 @@
 
     <!-- Circle background -->
     <path
-        android:fillColor="#008080"
+        android:fillColor="@color/chat_accent"
     android:pathData="M12,2a10,10 0 1,0 0,20a10,10 0 1,0 0,-20" />
 
     <!-- Plus sign -->
