--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,8 +58,7 @@
         android:layout_gravity="start"
         app:menu="@menu/activity_main_drawer"
         app:headerLayout="@layout/nav_header_main"
-        app:itemIconTint="@color/pink_500"
-        app:itemTextColor="@color/pink_500"/>
+        style="@style/NavigationViewIcons"/>
 
     <!--michelle stuff-->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
