--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -22,7 +22,8 @@
                 android:id="@+id/checkBoxTask"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="top" />
+                android:layout_gravity="top"
+                style="@style/CompletedCheckBox"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
