--- a/app/src/main/res/layout/item_task_calendar_completed.xml
+++ b/app/src/main/res/layout/item_task_calendar_completed.xml
@@ -22,7 +22,8 @@
             android:id="@+id/checkBoxTask"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            style="@style/CompletedCheckBox"/>
 
         <TextView
             android:id="@+id/textViewTaskName"
@@ -43,7 +44,7 @@
         app:layout_constraintTop_toBottomOf="@id/linearCalendarTask"
         app:layout_constraintEnd_toStartOf="@id/textViewTaskCompletedDate"
         android:text="Completed On:"
-        android:textColor="@color/pink_700"/>
+        style="@style/CompletedTasks"/>
 
     <TextView
         android:id="@+id/textViewTaskCompletedDate"
@@ -53,5 +54,5 @@
         app:layout_constraintTop_toBottomOf="@id/linearCalendarTask"
         app:layout_constraintEnd_toEndOf="@id/linearCalendarTask"
         android:text="M/D/YYYY X:XX AM"
-        android:textColor="@color/pink_700"/>
+        style="@style/CompletedTasks"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
