--- a/app/src/main/res/layout/calendar_day_title.xml
+++ b/app/src/main/res/layout/calendar_day_title.xml
@@ -4,5 +4,5 @@
     android:layout_weight="1"
     android:textSize="20dp"
     android:gravity="center"
-    android:textColor="@color/today"
+    style="@style/CalendarTitle"
     android:text="aaaaa"/>
