--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,16 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:onClick="onClick"
+    style="@style/HomeViewBackground"
     tools:context=".ui.home.HomeFragment">
 
 
     <Button
         android:id="@+id/bt"
+        style="@style/DadJokeButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="10dp"
-        android:background="#D98EAA"
-        android:backgroundTint="#E6A4BB"
         android:clickable="true"
         android:contextClickable="true"
         android:fontFamily="sans-serif"
@@ -38,8 +38,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:background="#EBC2CC"
-        android:backgroundTint="#D9B5BD"
+        style="@style/HomeViewBackgroundLight"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,8 +52,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="300dp"
-        android:background="#D98EAA"
-        android:backgroundTint="#E6A4BB"
+        style="@style/HomeViewBackgroundMedium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -70,8 +68,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="450dp"
-        android:background="#E294AF"
-        android:backgroundTint="#E96299"
+        style="@style/HomeViewBackgroundDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -89,6 +86,7 @@
         android:text="Mr. Hong's Joke of the Day:"
         android:textSize="24sp"
         android:textStyle="bold"
+        style="@style/HeaderTextView"
         app:layout_constraintEnd_toEndOf="@+id/view6"
         app:layout_constraintStart_toStartOf="@+id/view6"
         app:layout_constraintTop_toTopOf="@id/view6" />
@@ -103,6 +101,7 @@
         android:text="Dashboard:"
         android:textSize="24sp"
         android:textStyle="bold"
+        style="@style/HeaderTextView"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="@+id/view2"
         app:layout_constraintStart_toStartOf="@+id/view2"
@@ -115,6 +114,7 @@
         android:layout_marginStart="10dp"
         android:text="What do you call a factory that makes okay products?"
         android:textSize="20sp"
+        style="@style/SubHeaderTextView"
         app:layout_constraintBottom_toBottomOf="@id/view6"
         app:layout_constraintEnd_toStartOf="@+id/bt"
         app:layout_constraintStart_toStartOf="@+id/view6"
@@ -129,6 +129,7 @@
         android:text="Due Today:"
         android:textSize="24sp"
         android:textStyle="bold"
+        style="@style/HeaderTextView"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintStart_toStartOf="@id/view"
         app:layout_constraintTop_toTopOf="@+id/view" />
@@ -156,6 +157,7 @@
             android:layout_marginBottom="10dp"
             android:text="TextView"
             android:textSize="20sp"
+            style="@style/SubHeaderTextView"
             app:layout_constraintBottom_toBottomOf="@+id/listView"
             app:layout_constraintEnd_toEndOf="@+id/listView"
             app:layout_constraintStart_toStartOf="@id/listView"
