--- a/app/src/main/res/layout/fragment_user_settings.xml
+++ b/app/src/main/res/layout/fragment_user_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff1f2"
+    style="@style/HomeViewBackground"
     tools:context=".HomeActivity">
 
     <Button
@@ -13,7 +13,7 @@
         android:layout_height="32dp"
         android:background="@android:color/transparent"
         android:fontFamily="@font/roboto"
-        android:textColor="@color/pink_900"
+        style="@style/UploadPictureButton"
         android:text="Upload Image"
         android:textAllCaps="false"
         android:textSize="16sp"
@@ -29,7 +29,7 @@
         android:layout_marginTop="50dp"
         android:fontFamily="@font/roboto_bold"
         android:text="  Name:"
-        android:textColor="@color/pink_900"
+        style="@style/SettingsTextView"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/uploadpfp" />
@@ -55,7 +55,7 @@
         android:layout_marginTop="36dp"
         android:fontFamily="@font/roboto_bold"
         android:text="  Username:"
-        android:textColor="@color/pink_900"
+        style="@style/SettingsTextView"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/newName" />
@@ -79,7 +79,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/roundedbutton"
-        android:backgroundTint="#b84c65"
+        style="@style/SaveButton"
         android:text="Save"
         android:textColor="#fff1f2"
         app:layout_constraintEnd_toEndOf="@id/editProfileText"
@@ -105,8 +105,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/roboto"
-        android:textColor="@color/pink_900"
         android:text="TextView"
+        style="@style/SettingsTextView"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
         app:layout_constraintStart_toEndOf="@+id/nameLabel" />
@@ -119,17 +119,17 @@
         android:text="TextView"
         android:textSize="18sp"
         android:fontFamily="@font/roboto"
-        android:textColor="@color/pink_900"
+        style="@style/SettingsTextView"
         app:layout_constraintBaseline_toBaselineOf="@+id/usernameLabel"
         app:layout_constraintStart_toEndOf="@id/usernameLabel" />
 
     <TextView
         android:id="@+id/editProfileText"
-        android:textColor="#b84c65"
+        style="@style/SettingsHeaderTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/work_sans_bold"
         android:text="Edit Profile"
         android:textSize="34sp"
@@ -144,7 +144,7 @@
         android:layout_marginTop="36dp"
         android:fontFamily="@font/roboto_bold"
         android:text="  Reset Password:"
-        android:textColor="@color/pink_900"
+        style="@style/SettingsTextView"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username" />
@@ -183,7 +183,7 @@
         android:layout_marginTop="50dp"
         android:fontFamily="@font/roboto_bold"
         android:text="  Confetti Toggle"
-        android:textColor="@color/pink_900"
+        style="@style/SettingsTextView"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/currentPw" />
@@ -192,11 +192,12 @@
         android:id="@+id/switchConfetti"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/pink_900"
         app:layout_constraintBaseline_toBaselineOf="@id/textViewConfetti"
         app:layout_constraintStart_toEndOf="@id/textViewConfetti"
         android:paddingStart="4dp"
         android:checked="true"
+        app:thumbTint="@color/thumb"
+        app:trackTint="@color/track"
         />
 
 
