--- a/app/src/main/res/layout/item_task_calendar.xml
+++ b/app/src/main/res/layout/item_task_calendar.xml
@@ -23,7 +23,8 @@
             android:id="@+id/checkBoxTask"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            style="@style/CompletedCheckBox"/>
 
         <TextView
             android:id="@+id/textViewTaskName"
