--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,7 +23,7 @@
     <color name="calendar_focused_date">#FFA500</color>
     <color name="calendar_unfocused_date">#808080</color>
     <color name="calendar_selected_week">#800080</color>
-    <color name="calendar_selected_day_bar">#008080</color>
+    <color name="calendar_selected_day_bar">#c0d462</color>
     <color name="signin_white">#FFFEF4</color>
     <color name="signin_pink">#f7cdd0</color>
 
@@ -53,4 +53,48 @@
     <color name="candyfloss">#F0F9F8</color>
     <color name="mint">#C6E6E3</color>
     <color name="wintergreen">#81BFB7</color>
+
+
+    <!--header-->
+    <color name="toolbar">#e98851</color>
+    <color name="header">#c05933</color>
+
+    <!--nav bar gradient colors-->
+    <color name="start_color">#9a964b</color>
+    <color name="center_color">#A96F3F</color>
+    <color name="end_color">#b84732</color>
+
+    <!--home fragment gradient-->
+    <color name="gradient_dark">#f7cb3a</color>
+    <color name="gradient_medium">#f5d85c</color>
+    <color name="gradient_light">#f9ea7b</color>
+    <color name="background">#fcfece</color>
+    <color name="home_text">#b92a37</color>
+
+    <!--home fragment graph-->
+    <color name="due_later">#f0c655</color>
+    <color name="due_past">#c05933</color>
+    <color name="due_today">#9a964b</color>
+
+    <!-- color used for all of the icon tints-->
+    <color name="icon">#e98851</color>
+
+    <!--calendar colors-->
+    <color name="month_current">#d07f2e</color>
+    <color name="month_next">#f3b328</color>
+    <color name="today">#c0d462</color>
+    <color name="completed_text">#b84732</color>
+
+    <!--settings colors-->
+    <color name="settings_light">#e98851</color>
+    <color name="settings_dark">#c05933</color>
+    <color name="thumb">#94a344</color>
+    <color name="track">#c3d272</color>
+
+    <!--chat color-->
+    <color name="chat_accent">#c0d462</color>
+
+    <!--edit date background color-->
+    <color name="edit_task">#c0d462</color>
+    <color name="edit_date">#e6f798</color>
 </resources>
