Theme Toggle system configured for Home Page and Calendar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,8 +57,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:menu="@menu/activity_main_drawer"
-        app:headerLayout="@layout/nav_header_main"
-        style="@style/NavigationViewIcons"/>
+        app:headerLayout="@layout/nav_header_main" />
 
     <!--michelle stuff-->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
