--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/background"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     android:padding="16dp">
 
     <!--<include layout="@layout/activity_main" />-->
@@ -46,20 +48,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="M/D/YYYY"
-                android:padding="8dp"
+                android:padding="4dp"
                 android:textSize="10sp"
                 android:gravity="center"
-                android:background="@android:drawable/editbox_background_normal"/>
+                android:layout_margin="2dp"
+                android:background="@drawable/date_selector_background"/>
 
             <TextView
                 android:id="@+id/textViewTime"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:hint="X:XX AM"
-                android:padding="8dp"
+                android:padding="4dp"
                 android:textSize="10sp"
                 android:gravity="center"
-                android:background="@android:drawable/editbox_background_normal"/>
+                android:layout_margin="2dp"
+                android:background="@drawable/date_selector_background"/>
         </LinearLayout>
     </LinearLayout>
 
