--- a/app/src/main/res/layout/item_task_calendar_completed.xml
+++ b/app/src/main/res/layout/item_task_calendar_completed.xml
@@ -3,8 +3,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#FFFFFF">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/linearCalendarTask"
