theme toggle complete!

--- a/app/src/main/res/layout/fragment_user_settings.xml
+++ b/app/src/main/res/layout/fragment_user_settings.xml
@@ -77,14 +77,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/roundedbutton"
         style="@style/SaveButton"
         android:text="Save"
         android:textColor="#fff1f2"
         app:layout_constraintEnd_toEndOf="@id/editProfileText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewConfetti"
+        app:layout_constraintTop_toBottomOf="@id/themeLayout"
          />
 
     <EditText
@@ -176,29 +176,72 @@
         />
 
     <TextView
-        android:id="@+id/textViewConfetti"
+        android:id="@+id/textViewThemeToggle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
         android:fontFamily="@font/roboto_bold"
-        android:text="  Confetti Toggle"
+        android:text="  Theme Toggle"
         style="@style/SettingsTextView"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/currentPw" />
 
-    <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/switchConfetti"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBaseline_toBaselineOf="@id/textViewConfetti"
-        app:layout_constraintStart_toEndOf="@id/textViewConfetti"
-        android:paddingStart="4dp"
-        android:checked="true"
-        app:thumbTint="@color/thumb"
-        app:trackTint="@color/track"
-        />
-
+    <LinearLayout
+        android:id="@+id/themeLayout"
+        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/textViewThemeToggle"
+        android:gravity="center"
+        >
+        <Button
+            android:id="@+id/blackberry"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:text="black berry"
+            android:textSize="13sp"
+            android:background="@drawable/background_circle_default"
+            android:backgroundTint="@color/blackberry"/>
+        <Button
+            android:id="@+id/cherry"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:text="cherry"
+            android:textSize="13sp"
+            android:background="@drawable/background_circle_default"
+            android:backgroundTint="@color/cherry"/>
+        <Button
+            android:id="@+id/lime"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:text="lime"
+            android:textSize="13sp"
+            android:background="@drawable/background_circle_default"
+            android:backgroundTint="@color/lime"/>
+        <Button
+            android:id="@+id/mango"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:text="mango"
+            android:textSize="13sp"
+            android:background="@drawable/background_circle_default"
+            android:backgroundTint="@color/mango"/>
+        <Button
+            android:id="@+id/peach"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:text="peach"
+            android:textSize="13sp"
+            android:background="@drawable/background_circle_default"
+            android:backgroundTint="@color/peach"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
