--- a/app/src/main/res/drawable/received_message_background.xml
+++ b/app/src/main/res/drawable/received_message_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#E0E0E0" /> <!-- Light gray background -->
+    <solid android:color="#ffffff" /> <!-- Light gray background: E0E0E0 -->
     <corners android:radius="16dp" /> <!-- Rounded corners -->
 </shape>
