--- a/app/src/main/res/layout/activity_chat_list.xml
+++ b/app/src/main/res/layout/activity_chat_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ChatListActivity">
+    tools:context=".chat.ChatListActivity">
 
     <!-- Toolbar -->
     <androidx.appcompat.widget.Toolbar
@@ -39,7 +39,8 @@
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
+        android:paddingTop="16dp"
+        android:background="#ffffff"
         app:layout_constraintTop_toBottomOf="@id/toolbarChat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
